--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -10,6 +10,17 @@
   <body class="bg-zinc-900 text-white">
     <div class="main w-full min-h-screen flex flex-col items-center py-10">
       <!-- Form -->
+        <a
+          href="/"
+          style="
+            padding-left: 15px;
+            padding-bottom: 20px;
+            color: rgb(62, 62, 237);
+            text-decoration: underline;
+            width: 100%;
+          "
+          >go back</a
+        >
       <div class="form mb-10">
         <form
           action="/edit"
