--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,13 +13,34 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-zinc-900 text-white">
-    <div class="main w-full min-h-screen flex flex-col items-center py-10">
+    <div class="main w-full min-h-screen flex flex-col items-center py-0">
+      <nav
+        class="bg-zinc-800"
+        style="
+          width: 100%;
+          height: 10vh;
+
+          display: flex;
+          justify-content: space-between;
+          padding: 20px;
+          align-items: center;
+        "
+      >
+        <h2 style="font-size: 25px">Welcome, <%=names %></h2>
+        <div style="display: flex; gap: 10px">
+          <a href="/signup">Sign up</a>
+
+          <a href="/logout">Logout</a>
+        </div>
+      </nav>
+
       <!-- Form -->
+
       <div class="form mb-10">
         <form
           action="/create"
           method="POST"
-          class="form p-5 bg-zinc-800 rounded-lg shadow-lg"
+          class="form p-5 bg-zinc-800 rounded-lg shadow-lg my-10"
         >
           <input
             type="text"
