--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -11,7 +11,7 @@
     <div class="main w-full min-h-screen flex flex-col items-center py-10">
       <!-- Form -->
         <a
-          href="/"
+          href="/index"
           style="
             padding-left: 15px;
             padding-bottom: 20px;
