--- a/views/show.ejs
+++ b/views/show.ejs
@@ -12,7 +12,7 @@
       <!-- Form -->
       <div class="mains">
         <a
-          href="/"
+          href="/index"
           style="
             padding-left: 10px;
             padding-bottom: 20px;
