--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,7 @@
         <div style="display: flex; gap: 10px">
           <!-- <a href="/signup">Sign up</a> -->
 
+          <a href="/profile">myProfile</a>
           <a href="/logout">Logout</a>
         </div>
       </nav>
